force-app/main/default/objects/Reg_attachment_counter__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action take - Insert or Delete</description>
    <label>Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>