force-app/main/default/objects/Reg_attachment_counter__e/fields/CDL_Id__c.field-meta.xml
<CustomField>
    <fullName>CDL_Id__c</fullName>
    <description>ID of content document link</description>
    <label>CDL Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>