force-app/main/default/objects/Reg_attachment_counter__e/fields/Linked_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Linked_Entity_ID__c</fullName>
    <label>Linked Entity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>