force-app/main/default/objects/Reg_attachment_counter__e/fields/Number_of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attachments__c</fullName>
    <label>Number of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>